<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Parameters" Id="{2181cba9-465d-4eb9-9268-5dd160c4a037}">
    <Declaration><![CDATA[TYPE ST_Parameters :
STRUCT
	fCyclicTime 					: LREAL := 0.01; // [s]
	
	stJoystickInputScalingLeftX 		: ST_JoystickInputScaling := (fMaxInputValue := 20469.0, fMinInputValue := 11924.0, fNeutralInputValue := 16265, fNeutralDeadband := 100.0, fMaxOutputValue := 1.0, fMinOutputValue := -1.0, fNeutralOutputValue := 0.0);
	stJoystickInputScalingLeftY 		: ST_JoystickInputScaling := (fMaxInputValue := 20436.0, fMinInputValue := 11910.0, fNeutralInputValue := 16369, fNeutralDeadband := 100.0, fMaxOutputValue := 1.0, fMinOutputValue := -1.0, fNeutralOutputValue := 0.0);
	stJoystickInputScalingRightX 		: ST_JoystickInputScaling := (fMaxInputValue := 20481.0, fMinInputValue := 11905.0, fNeutralInputValue := 16370, fNeutralDeadband := 100.0, fMaxOutputValue := 1.0, fMinOutputValue := -1.0, fNeutralOutputValue := 0.0);
	stJoystickInputScalingRightY 		: ST_JoystickInputScaling := (fMaxInputValue := 20342.0, fMinInputValue := 12050.0, fNeutralInputValue := 16365, fNeutralDeadband := 100.0, fMaxOutputValue := 1.0, fMinOutputValue := -1.0, fNeutralOutputValue := 0.0);

		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>